previewer.css
/*!
 * previewer.js v0.0.9
 * https://github.com/ajayns/previewer
 *
 * Copyright (c) 2017 Ajay NS
 * Released under the MIT license
 */

/* PAGE STYLING */
body {
	margin: 0;
}

/* PREVIEWER STYLING */

#previewer {
	display: none;
}

/* Button to close previewer */
#previewer-close {
	position: absolute;
	width: 3vw;
	height: 3vw;
	border-bottom-left-radius: 3vw;
	right: 0;
	top: 0;
	box-sizing: border-box;
	background-color: rgba(0, 0, 0, 0.75);
	cursor: pointer;
	z-index: 10;
}

/* 'x' inside the close button */
#previewer-close>span {
	position: absolute;
	font-size: 1.5vw;
	font-weight: bold;
	color: white;
	top: 0.25vw;
	right: 0.5vw;
}

/* Styling for image */
#previewer-img {
	margin: auto;
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	max-height: 90%;
	max-width: 90%;
	z-index: 10;
	
	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
}

/* Transperant page fade */
#previewer-fade {
	background-color: rgba(0,0,0,0.25);
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	z-index: 10;
}

/* Use pointer cursor for src img */
.preview-img, .preview-imgs>li>img {
	cursor: pointer;
}

